--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT = "5000"
-CONNECTION_URL = "mongodb+srv://maheswarimug21cs:lJl1lcIrhi2tJYI6@stack-overflow-clone.q8d9bwt.mongodb.net/test"
+CONNECTION_URL = "mongodb+srv://maheswarimug21cs:DL1iUrAUx2JiQXnW@stack-overflow-clone.q8d9bwt.mongodb.net/test"
 JWT_SECRET = JwtSecret
 
